fixed aggresive text-align rule throwing off hotspot indicators

--- a/src/packages/modules/editorial-hotspots-e6/css/editorial-hotspots-e6.scss
+++ b/src/packages/modules/editorial-hotspots-e6/css/editorial-hotspots-e6.scss
@@ -243,6 +243,7 @@ $transitionSpeed: .5s;
   width: 56px;
   cursor: pointer;
   z-index: 1;
+  text-align: left;
   .hspot-core {
     margin: $centerRatio;
     height: $innerDiameter;
